@@ -51,7 +51,7 @@ namespace lsp
             public:
                 /**
                  * Parse file
-                 * @param handler Wavefont Object file handler
+                 * @param handler configuration file handler
                  * @param path UTF-8 path to the file
                  * @param charset character set encoding of the file
                  * @return status of operation
@@ -60,7 +60,7 @@ namespace lsp
 
                 /**
                  * Parse file
-                 * @param handler Wavefont Object file handler
+                 * @param handler configuration file handler
                  * @param path path to the file
                  * @param charset character set encoding of the file
                  * @return status of operation
@@ -69,7 +69,7 @@ namespace lsp
 
                 /**
                  * Parse file
-                 * @param handler Wavefont Object file handler
+                 * @param handler configuration file handler
                  * @param path path to the file
                  * @param charset character set encoding of the file
                  * @return status of operation
@@ -78,7 +78,7 @@ namespace lsp
 
                 /**
                  * Parse data from input stream
-                 * @param handler Wavefont Object file handler
+                 * @param handler configuration file handler
                  * @param is input stream
                  * @param flags wrap flags
                  * @param charset character set
@@ -88,7 +88,7 @@ namespace lsp
 
                 /**
                  * Parse data from native encoded string
-                 * @param handler Wavefont Object file handler
+                 * @param handler configuration file handler
                  * @param str data input
                  * @param charset character set
                  * @return status of operation
@@ -97,7 +97,7 @@ namespace lsp
 
                 /**
                  * Parse data from text string
-                 * @param handler Wavefont Object file handler
+                 * @param handler configuration file handler
                  * @param str data input
                  * @return status of operation
                  */
@@ -105,7 +105,7 @@ namespace lsp
 
                 /**
                  * Parse data from character sequence
-                 * @param handler Wavefont Object file handler
+                 * @param handler configuration file handler
                  * @param seq input sequence
                  * @param flags wrap flags
                  * @return status of operation
