@@ -5,6 +5,7 @@
 === 1.0.3 ===
 - Updated plugin metadata (contributed by Dennis Braun).
 - Added system::sleep_msec function for millisecond-precise sleeps.
+- Fixed typo in Wavefront Object File Format name.
 
 === 1.0.2 ===
 * Updated build scripts.
@@ -28,7 +29,7 @@
 * Fixed bug in the resource::Compressor and resource::Decompressor classes which could cause
   file corruption at decompression stage.
 * Reduced size of fields for resource::raw_resource_t structure.
-* Fixed bug in Wavefont OBJ file parser: the locale of the file always should be considered to be C.
+* Fixed bug in Wavefront OBJ file parser: the locale of the file always should be considered to be C.
 
 === 0.5.10 ===
 * Added support of boolean parameters by the configuration parser.
